@@ -968,6 +968,15 @@
 678,0,0,0,0,5000
 //==========================================
 
+//===== Item Use-Only Skills ===============
+//-- CASH_BLESSING
+689,0,0,0,60000:80000:100000:120000:140000:160000:180000:200000:220000:240000,0
+//-- CASH_INCAGI
+690,0,0,0,60000:80000:100000:120000:140000:160000:180000:200000:220000:240000,0
+//-- CASH_ASSUMPTIO
+691,0,0,0,20000:40000:60000:80000:100000,0
+//==========================================
+
 //===== 2nd Jobs Quest Skills ==============
 //-- KN_CHARGEATK
 1001,300,300,0,0,0
@@ -1020,7 +1029,7 @@
 //-- HAMI_BLOODLUST
 8008,0,0,0,60000:180000:300000,300000:600000:900000
 //-- HFLI_MOON
-8009,0,0,1000,0,0	
+8009,0,0,1000,0,0
 //-- HFLI_FLEET
 8010,0,0,0,60000:55000:50000:45000:40000,60000:70000:80000:90000:120000
 //-- HFLI_SPEED
